# moscode-data-collector

./: .dockerignore  .pylintrc  Dockerfile  Makefile  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 14933e072b35_fixing_submissin.py  161571458e43_fixing_addresses_table.py  1e1527203992_fixing_basemodel.py  311a2e572b58_changing_phone_field_to_bidint.py  449cb372a695_fixing_addresses_table.py  50a3f4a431f7_changing_count_field.py  544e89409846_fixing_basemodel.py  668b9069ab86_added_email_field_to_client.py  6c35c3a6816b_initial.py  94d15e07c3c1_pre_commit.py  faff79844b87_changing_count_field.py  fea41b65bbb9_adding_addresses_table.py
app/: main.py  schemas.py  settings.py
db/: main.py  models.py
kafka/: main.py
